[package]
name = "kay-json-repair"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "JSON repair utility for Kay CLI"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
regex = "1"

[dev-dependencies]
pretty_assertions = "1"